fixed alignment

--- a/src/components/home.css
+++ b/src/components/home.css
@@ -390,6 +390,7 @@
   .divider{
     display: flex;
     align-items: center;
+    background-position: center;
     
    
     
